--- a/style/acad.scss
+++ b/style/acad.scss
@@ -416,6 +416,7 @@ body{
             .line-abstract{
 
               .abstract-text{
+                cursor: pointer;
                 div{
                   font-family: 'Quicksand';
                   font-style: normal;
@@ -424,7 +425,7 @@ body{
                   line-height: 2.3rem;
                   letter-spacing: 0.03rem;
   
-                  -webkit-line-clamp: 4;
+                  -webkit-line-clamp: 3;
                   -webkit-box-orient: vertical;
                   overflow: hidden;
                   text-overflow: ellipsis;
@@ -447,8 +448,8 @@ body{
                     color: var(--orange-100);
                     font-weight: bold;
                     background: none;
-                    font-size: 1.4rem;
                     cursor: pointer;
+                    text-decoration-line: none;
                   }         
               }
              
@@ -529,6 +530,7 @@ body{
             }
 
             .talk-edit{
+              display: none;
               p{
                 text-align: center;
                 margin-bottom: 2.2rem;
@@ -616,6 +618,7 @@ body{
             }
          
             .talk-confirm{
+              display: none;
               h6{
                 margin-top: 1.5rem;
                 margin-bottom: 1.8rem;
@@ -624,6 +627,12 @@ body{
               p{
                 text-align: center;
                 margin-bottom: 3rem;
+              }
+              a{
+                margin-bottom: 4rem;
+              }
+              button{
+                padding: 0.7rem 5.4rem;
               }
             }
           //repetidos
@@ -670,6 +679,7 @@ body{
 
             .talk-comments{
               .talk-card{
+                margin-top: 1.5rem;
                 position: relative;
                 border: 0.1rem solid var(--gray-50);
                 box-shadow: 0px 0px 0.8rem rgba(0, 0, 0, 0.12);
@@ -684,10 +694,11 @@ body{
                   text-align: left;
                   text-decoration-line: none;
                 }
+
                 
 
                 .talk-comment{
-                 
+                  cursor: pointer;
                   padding: 1.7rem 2.3rem;
                   
                   a{
@@ -733,39 +744,55 @@ body{
                    }
     
                  }
-                }
-
-                .comment-answer{
-                  border-top: 0.1rem solid var(--gray-50);
-                  p{
-                   margin-right: 4rem;
-                  }
                  
-                 }
-                 .answer-autor{
-                  background: #F8F8F8;
-                  padding: 1.8rem 2.4rem 3.5rem 2.4rem;
-                  .answer-head{
-                    margin-bottom: 1rem;
-                    
+                }
+                .comments-num{
+                  height: 0;
+                  opacity: 0;
+                  overflow: hidden;
+                  transition: opacity 1s;
+
+                  .comment-answer{
+                    border-top: 0.1rem solid var(--gray-50);
                     p{
-                      color: var(--orange-100);
-                      font-weight: 700;
-                      margin-right: 1.3rem;
-                      
+                     margin-right: 4rem;
                     }
-                    img{
-                      margin-right:0.5rem;
-                      width: 2.1rem;
+                   
+                   }
+                   .answer-autor{
+                    background: #F8F8F8;
+                    padding: 1.8rem 2.4rem 3.5rem 2.4rem;
+                    .answer-head{
+                      margin-bottom: 1rem;
+                      
+                      p{
+                        color: var(--orange-100);
+                        font-weight: 700;
+                        margin-right: 1.3rem;
+                        
+                      }
+                      img{
+                        margin-right:0.5rem;
+                        width: 2.1rem;
+                      }
+                    }
+                    
+                   }
+                   .answer-user{
+                    padding: 1.8rem 2.4rem;
+                    a{
+                      margin-bottom: 1rem;
+  
                     }
                   }
-                  
-                 }
-                 .answer-user{
-                  padding: 1.8rem 2.4rem;
                 }
 
-                 
+                .hide-comments-num{
+                  height: 100%;
+                  opacity: 100%;
+
+                }
+              
 
                 .talk-opacity{
                   padding: 3.5rem;
@@ -777,7 +804,6 @@ body{
                   border: 1px solid var(--gray-50);
                   border-radius: 4px;
                   text-align: center;
-                  display: none;
                   svg{
                     path{
                       fill: var(--gray-550);
@@ -791,6 +817,22 @@ body{
                 }
               }
               
+              .comment-new{
+                display: none;
+              }
+
+              .hide-new{
+                display: grid;
+              }
+              
+            }
+
+            .hide-talk-view{
+              display: inline;
+            }
+
+            .hide-talk-ocult{
+              display: none;
             }
           }
         }
@@ -823,20 +865,23 @@ body{
                 align-items: center;
   
                 &::after{
-                  content: ' ';
+                  content: " ";
                   flex: 1 1;
                   height: 0.1rem;
                   background: #a8a8b3;
                   margin-right: 0.8rem;
                   margin-left: 0.5rem;
+                  width: 4.5rem;
                 }
                 &::before{
-                  content: ' ';
+                  content: " ";
                   flex: 1 1;
                   height: 0.1rem;
                   background: #a8a8b3;
                   margin-right:  0.5rem;
                   margin-left: 0.8rem;
+                  width: 4.5rem;
+
                 }
               }
             }
