--- a/style/acad.css
+++ b/style/acad.css
@@ -365,7 +365,7 @@ body main .container .container-main .margin .container-column .column-details .
 
 body main .container .container-main .margin .container-column .column-details .details-infor .infor-main .main {
   padding: 0 1.0rem;
-  height: 36.4rem;
+  height: 100%;
   overflow-y: scroll;
   font-family: 'Quicksand';
   font-style: normal;
@@ -835,6 +835,10 @@ body main .container .container-main .margin .container-line .talk-comments .tal
   text-align: center;
 }
 
+body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-opacity svg {
+  width: 2rem;
+}
+
 body main .container .container-main .margin .container-line .talk-comments .talk-card .talk-opacity svg path {
   fill: var(--gray-550);
 }
@@ -1128,22 +1132,66 @@ main div:target {
   html {
     font: 25.5% Roboto, sans-serif;
   }
-  html .teste {
+  html main .container .container-main .container-header .account {
     position: relative;
   }
-  html .teste .container-autor {
-    position: inherit;
+  html main .container .container-main .container-header .account .container-language {
+    border: none;
   }
-  html .teste .container-autor .autor-infor {
-    background: var(--orange-50);
-    border-radius: 5px;
-    position: absolute;
+  html main .container .container-main .container-header .account .container-language .select {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  html main .container .container-main .container-header .account .container-language .select p {
+    display: none;
+  }
+  html main .container .container-main .container-header .account .container-autor {
+    position: inherit;
+    margin-left: 0;
+  }
+  html main .container .container-main .container-header .account .container-autor:active .autor-infor {
+    display: inline;
+  }
+  html main .container .container-main .container-header .account .container-autor .autor-infor {
+    display: none;
     right: 0;
     top: 3.5rem;
-    padding: 8px;
-    color: white;
-    -webkit-box-shadow: 0px 0px 0.2rem rgba(0, 0, 0, 0.12), 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.24);
-            box-shadow: 0px 0px 0.2rem rgba(0, 0, 0, 0.12), 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.24);
+    background: white;
+    border-radius: 0.5rem;
+    position: absolute;
+    padding: 1.5rem;
+    color: var(--gray-500);
+    -webkit-box-shadow: 0px 0px 0.8rem rgba(0, 0, 0, 0.12);
+            box-shadow: 0px 0px 0.8rem rgba(0, 0, 0, 0.12);
+  }
+  html main .container .container-main .container-header .account .container-autor .autor-infor p::after {
+    border-top: 0.1rem solid var(--gray-50);
+    width: 100%;
+    height: 1;
+    content: ' ';
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1;
+    flex: 1 1;
+    height: 0.1rem;
+  }
+  html main .container .container-main .margin .container-column {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  html main .container .container-main .margin .container-column .column-video {
+    max-width: 100%;
+    padding-right: 0;
+    padding-bottom: 2rem;
+  }
+  html main .container .container-main .margin .container-column .column-details .details-infor {
+    height: auto;
+    min-height: auto;
+  }
+  html main .container .container-main .margin .container-column .column-details .details-infor .infor-main {
+    height: 25rem;
   }
 }
 /*# sourceMappingURL=acad.css.map */
