--- a/style/acad.scss
+++ b/style/acad.scss
@@ -344,7 +344,7 @@ body{
                   
                   .main{
                     padding: 0 1.0rem;
-                    height: 36.4rem;
+                    height: 100%;
                     overflow-y: scroll;
                     font-family: 'Quicksand';
                     font-style: normal;
@@ -805,6 +805,7 @@ body{
                   border-radius: 4px;
                   text-align: center;
                   svg{
+                    width: 2rem;
                     path{
                       fill: var(--gray-550);
                     }
@@ -1093,29 +1094,81 @@ main div:target{
   html{
     font: 25.5% Roboto, sans-serif;
 
-    .teste{
-      position: relative;
+    main{
+      .container {
+        .container-main {
+          .container-header{
+            .account{
+              position: relative;
+              .container-language{
+                border: none;
+                .select{
+                  justify-content: center;
 
-      .container-autor{
-       position: inherit;
-        .autor-infor{
-          background: var(--orange-50);
-          border-radius: 5px;
-          position: absolute;
-          right: 0;
-          top: 3.5rem;
-          padding: 8px;
-          color: white;
-          box-shadow: 0px 0px 0.2rem rgba(0, 0, 0, 0.12), 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.24);
-
+                  p{
+                    display: none;
+                  }
+                }
+              }
+        
+              .container-autor{
+               position: inherit;
+               margin-left: 0;
+               
+               &:active .autor-infor{
+                 display: inline;
+               }
+                .autor-infor{
+                  display: none;
+                  right: 0;
+                  top: 3.5rem;
+                  background: white;
+                  border-radius: 0.5rem;
+                  position: absolute;
+                  padding: 1.5rem;
+                  color: var(--gray-500);
+                  box-shadow: 0px 0px 0.8rem rgba(0, 0, 0, 0.12);
       
-        }  
-  
-      }
-     
-    }
-
-    
+                    p::after{
+                      border-top: 0.1rem solid var(--gray-50);
+                      width: 100%;
+                      height: 1;
+                      content: ' ';
+                      -webkit-box-flex: 1;
+                      -ms-flex: 1 1;
+                      flex: 1 1;
+                      height: 0.1rem;
+                    }
+                  
+                }  
+          
+              }
+             
+            }
+          }
+            .margin {
+              .container-column{
+                flex-direction: column;
+                .column-video{
+                  max-width: 100%;
+                  padding-right: 0;
+                  padding-bottom: 2rem;
+                }
+                .column-details {
+                  .details-infor{
+                    height: auto;
+                    min-height: auto;
+                    
+                    .infor-main{
+                      height: 25rem;
+                    }
+                  }
+                }
+            }
+          }
+        }
+      } 
+    }   
   }
 }
 
