--- a/style/global.css
+++ b/style/global.css
@@ -106,6 +106,7 @@ a{
   --orange-100: #ED7839;
   --orange-500: #F48F44;
   --orange-gray: #725C5C;
+  --brown: #8d35067a;
   --purple: #71478E;
   --danger:#F85959;
 
