--- a/style/acad.css
+++ b/style/acad.css
@@ -280,6 +280,42 @@ body main .container .container-main .margin .container-column .column-video .vi
   margin-bottom: 1.9rem;
 }
 
+body main .container .container-main .margin .container-column .column-video .video-link {
+  position: relative;
+}
+
+body main .container .container-main .margin .container-column .column-video .video-link .video-dados {
+  position: absolute;
+  background: var(--brown);
+  width: 100%;
+  height: 100%;
+  color: var(--white);
+  padding: 3.5rem 3.2rem;
+}
+
+body main .container .container-main .margin .container-column .column-video .video-link .video-dados .profile-video {
+  border-radius: 100%;
+  width: 8.4rem;
+  height: 8.4rem;
+  border: 0.1rem solid var(--orange-100);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 1.7rem;
+}
+
+body main .container .container-main .margin .container-column .column-video .video-link .video-dados .profile-video img {
+  width: 90%;
+  height: 90%;
+  border-radius: 100%;
+}
+
 body main .container .container-main .margin .container-column .column-video .video-link iframe {
   width: 100%;
   height: 43.9rem;
@@ -480,6 +516,10 @@ body main .container .container-main .margin .container-line .talk-add .icons {
 
 body main .container .container-main .margin .container-line .talk-add .icons img:nth-child(2) {
   margin: 0rem 5rem;
+}
+
+body main .container .container-main .margin .container-line .talk-add .icons img {
+  width: 6rem;
 }
 
 body main .container .container-main .margin .container-line .talk-add p {
@@ -1192,6 +1232,15 @@ main div:target {
   }
   html main .container .container-main .margin .container-column .column-details .details-infor .infor-main {
     height: 25rem;
+  }
+}
+
+@media (max-width: 320px) {
+  html main .container .container-footer .padding-footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 /*# sourceMappingURL=acad.css.map */
