Correção no código

--- a/style/acad.scss
+++ b/style/acad.scss
@@ -256,6 +256,7 @@ body{
               padding-right: 3.1rem;
   
               .video-title{
+                width: 100%;
                 h5{
                   font-style: normal;
                   font-weight: 900;
